Issue #21: Registration offers can be made only by certain admins
Currently there are only two types of users: normal users and admins.
Will introduce more types of admins later.

--- a/www/css/00-iragu-green-on-black.css
+++ b/www/css/00-iragu-green-on-black.css
@@ -90,8 +90,7 @@ a {
 }
 
 .grid-item {
-  /* background-color: hsl(var(--hue), 35%, 75%, 1); */
-  background-color: grey;
+  background-color: var(--background-2);
   float: left;
   margin: 10px;
   padding: 10px;
