--- a/www/css/00-iragu-green-on-black.css
+++ b/www/css/00-iragu-green-on-black.css
@@ -128,3 +128,19 @@ button {
   border: none;
 }
 
+.ul-top-menu {
+  display: flex;
+  align-items: stretch;
+  justify-content: space-between;
+  width: 95%;
+  background: var(--background-2);
+  margin: 5px;
+  padding: 5px;
+  font-size: 1em;
+}
+
+.li-top-menu {
+  display: block;
+  flex: 0 1 auto;
+  list-style-type: none;
+}
