WIP: User registration needs invite tokens.
Re-working user registration such that invite tokens are necessary.  No
need to allow registration for everybody. Only invited users can register.

--- a/www/css/00-iragu-green-on-black.css
+++ b/www/css/00-iragu-green-on-black.css
@@ -194,3 +194,12 @@ button {
    background-color: red;
    color: white;
 }
+
+#table_invite {
+   border: 1px solid var(--text-color);
+}
+
+#div_signup {
+   width: 80%;
+   margin-left: 10%;
+}
